# suave

./: Cargo.toml  README.md  ]
src/: clipboard.rs  lib.rs  message.rs  pipe.rs  queue.rs
