[package]
name = "suave"
version = "0.1.2"
edition = "2021"
authors = ["Deeton Rushton"]
description = "Interprocess communication"
readme = "README.md"
repository = "https://github.com/deetonn/suave"
license = "MIT"
keywords = ["network", "process", "system", "lowlevel"]
rust-version = "1.73.0"
include = ["/src", "LICENSE"]
publish = true
homepage = "https://github.com/deetonn/suave"
documentation = "https://github.com/deetonn/suave"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.34.0", features = ["fs"] }
