[package]
name = "suave"
version = "0.1.3"
edition = "2021"
authors = ["Deeton Rushton"]
description = "Anything interprocess communication is here!"
readme = "README.md"
repository = "https://github.com/deetonn/suave"
license = "MIT"
keywords = ["network", "process", "system", "lowlevel"]
rust-version = "1.73.0"
include = ["/src", "LICENSE"]
publish = true
homepage = "https://github.com/deetonn/suave"
documentation = "https://docs.rs/suave/latest/suave/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.34.0", features = [
  "fs",
  "rt",
  "macros",
  "io-util",
  "time",
] }
