[package]
name = "suave"
version = "0.2.2"
edition = "2021"
authors = ["Deeton Rushton"]
description = "Multi-process communication utility library."
readme = "README.md"
repository = "https://github.com/deetonn/suave"
license = "MIT"
keywords = ["process", "system", "lowlevel", "multiprocess", "async"]
rust-version = "1.73.0"
include = ["/src", "LICENSE"]
publish = true
homepage = "https://github.com/deetonn/suave"
documentation = "https://docs.rs/suave/latest/suave/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.34.0", features = [
  "fs",
  "rt",
  "macros",
  "io-util",
  "time",
] }

arboard = { version = "3.3.0" }
